microservices/name-gen.yaml
# NAME GEN SERVICE
apiVersion: v1
kind: Service
metadata:
  name: name-gen
  # namespace: pingo-dev
  labels:
    app: name-gen
spec:
  ports:
    - name: http
      protocol: "TCP"
      port: 80
      targetPort: 8085
  selector:
    app: name-gen

---
# NAME GEN DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: name-gen
  namespace: pingo-dev
  labels:
    app: name-gen
  annotations:
    linkerd.io/inject: enabled
spec:
  replicas: 1
  selector:
    matchLabels:
      app: name-gen 
  template:
    metadata:
      labels:
        app: name-gen
        version: v1
    spec:
      containers:
      - image: 4suredev/name-gen:v1
        # imagePullPolicy: Always
        name: name-gen
        ports:
        - name: name-gen
          containerPort: 3000
