microservices/name-processor.yaml
## NAME PROCESSOR SERVICE
apiVersion: v1
kind: Service
metadata:
  name: name-processor
  namespace: pingo-dev
  labels:
    app: name-processor
spec:
  ports:
    - name: http
      protocol: "TCP"
      port: 80
      targetPort: 8086
  selector:
    app: name-processor

---
## NAME PROCESSOR DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: name-processor
  namespace: pingo-dev
  labels:
    app: name-processor
  annotations:
    linkerd.io/inject: enabled
spec:
  replicas: 6
  selector:
    matchLabels:
      app: name-processor 
  template:
    metadata:
      labels:
        app: name-processor
        version: v1
    spec:
      containers:
      - image: 4suredev/name-processor:v1
        # imagePullPolicy: Always
        name: name-processor
        ports:
        - name: name-processor
          containerPort: 3000
