microservices/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pwa
  namespace: pingo-dev
  labels:
    app: pwa
spec:
  defaultBackend:
    service:
      name: pwa
      port:
        number: 80
