microservices/keycloak.yaml
# KEYCLOAK INGRESS
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: keycloak
spec:
  virtualhost:
    fqdn: pingo.keycloak.127.0.0.1.nip.io
  routes:
  - requestHeadersPolicy:
      set:
      - name: l5d-dst-override
        value: keycloak.keycloak.svc.cluster.local:8080
    services:
    - name: keycloak
      port: 8080

---
# KEYCLOAK SERVICE
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  # namespace: keycloak
  labels:
    app: keycloak
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP

---
# KEYCLOAK DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
  annotations:
    linkerd.io/inject: enabled
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:14.0.0
        # imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        readinessProbe:
          httpGet:
            path: /auth/realms/master
            port: 8080
